2004-08-15  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Jacobi method}): Documented
	Schmidt and v.Mises convergence criteria.

2004-08-14  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Noise model}): Documented
	small signal and noise model of the MOSFET device.

2004-08-12  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Gauss-Seidel method}): Documented
	Gauss-Seidel and Jacobi methods for solving linear equation
	systems (both iterative methods).
	(subsection{Convergence}): Made some additional remarks about
	convergence helpers.

2004-08-07  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Physical model}): Completed the
	documentation about the large signal and physical model of
	the MOSFET level 1.

2004-08-05  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (section{MOS Field-Effect Transistor}): 
	Started to document the MOSFET model.

2004-08-03  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Large signal model}): Fixed bug
	in Id model of junction FET.  Replaced the O of O. Jensen to
	the norwegian {\O}.

2004-08-01  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Mixed Two-Port matrix
	conversions}): Added the formulas for G to S and S to G
	transformations.
	(section{PN-Junction Diode}): Documented new model parameters
	'Fc', 'Cp', 'Isr' and 'Nr'.

2004-07-31  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Gauss-Jordan method}): Documented
	Gauss-Jordan method for solving linear equation systems.
	(subsection{Diode}): Fixed equations for noise.

2004-07-28  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Two-Port parameters
	of passive devices}): New subsection about standard passive
	circuit topologies and their matrix representations.
	(subsection{Noise model}): Documented noise model of diode
	and SGP model of BJT.

2004-07-27  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Noise model}): Documented noise