@@ -34,7 +34,7 @@ unfixed) have a look at the file BUGS.
 	- Implement DC model for transmission line.
 	- Implement noise model for attenuator, diode and isolator.
 	- Recalculate S-parameters in touchstone files for n+1 ports.
-- Implement excess phase and polarity of SGP BJT model.
+	- Implement excess phase and polarity of SGP BJT model.
 - Make Wheeler's quasi-static formulas for microstrip continual.
 	- Allow subcircuits in netlist and simulate them correctly.
 	- Parameter for exporting equation result to dataset.
