@@ -1,3 +1,8 @@
+2004-08-16  Stefan Jahn  <jahn@mwt.ee.tu-berlin.de>
+
+	* devices/bjt.cpp: Implemented excess phase parameter of
+	BJT model.
+
 2004-08-14  Stefan Jahn  <stefan@lkcc.org>
 
 	* devices/diode.cpp: Adjusted invalid backward current for
